# flygym

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  changelog.html  check_cardinal_vectors.py  contributing.html  genindex.html  index.html  installation.html  mkdocs.yml  neuromechfly.html  objects.inv  outreach.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sfn2024.html  sitemap.xml  video_game.ipynb  video_game.py  video_game_multithread.py  workshop.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  neuromechfly.doctree  outreach.doctree  sfn2024.doctree  workshop.doctree
.doctrees/api_ref/: arena.doctree  camera.doctree  fly.doctree  index.doctree  legacy.doctree  mdp_specs.doctree  olfaction.doctree  parameters.doctree  preprogrammed.doctree  simulation.doctree  state.doctree  utils.doctree  vision.doctree
.doctrees/gallery/: index.doctree  video_10_odour_taxis.doctree  video_11_head_stabilization.doctree  video_12_multimodal_navigation.doctree  video_13_plume_navigation.doctree  video_14_fly_follow_fly.doctree  video_3_forces.doctree  video_4_climbing.doctree  video_8_controller_comparison.doctree  video_9_visual_taxis.doctree
.doctrees/tutorials/: advanced_olfaction.doctree  advanced_vision.doctree  cpg_controller.doctree  gym_basics_and_kinematic_replay.doctree  head_stabilization.doctree  hybrid_controller.doctree  index.doctree  olfaction.doctree  olfaction_basics.doctree  path_integration.doctree  rule_based_controller.doctree  turning.doctree  vision.doctree  vision_basics.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  black.yaml  documentation.yaml  test_poetry_lock.yaml  test_poetry_lock_macos_apple_silicon.yaml  test_poetry_lock_macos_intel.yaml  test_poetry_lock_ubuntu.yaml  test_poetry_lock_windows.yaml  tests.yaml  tests.yml  tests_docker.yaml  tests_full.yaml  tests_linux.yaml  tests_macos.yaml  tests_macos_apple_silicon.yaml  tests_macos_intel.yaml  tests_ubuntu22.yaml  tests_windows.yaml
SUMMARY/: index.html
_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  neuromechfly.rst.txt  outreach.rst.txt  sfn2024.rst.txt
_sources/api_ref/: arena.rst.txt  index.rst.txt  legacy.rst.txt  mdp_specs.rst.txt  olfaction.rst.txt  (+4 more)
api_ref/: arena.html  camera.html  fly.html  index.html  legacy.html  mdp_specs.html  olfaction.html  parameters.html  preprogrammed.html  simulation.html  state.html  utils.html  vision.html
citation/: index.html
doc/: sanitize_github_raw_media_links.sh
docs/: SUMMARY.md  citation.md  gen_ref_pages.py  index.md  installation.md  interactive.md  migration.md  outreach.md  tutorials.md
flygym/: __init__.py  camera.py  camera_new.py  common.py  config.yaml  core.py  fly.py  preprogrammed.py  simulation.py  test_mujoco_py.py  util.py
flygym_gymnasium/: camera.py  core.py  fly.py  preprogrammed.py  simulation.py  util.py
gallery/: index.html  video_10_odour_taxis.html  video_11_head_stabilization.html  video_12_multimodal_navigation.html  video_13_plume_navigation.html  video_14_fly_follow_fly.html  video_3_forces.html  video_4_climbing.html  video_8_controller_comparison.html  video_9_visual_taxis.html
gen_ref_pages/: index.html
installation/: index.html
interactive/: index.html
migration/: index.html
notebooks/: .gitignore  advanced_olfaction.ipynb  advanced_vision.ipynb  check_climbing_modified_tarsus.ipynb  colab_template.ipynb  complex_olfaction.ipynb  connectome_vision_model.ipynb  cpg_controller.ipynb  floors.ipynb  flygym_mujoco_tutorial.ipynb  generate_random_poses.ipynb  gym_basics_and_kinematic_replay.ipynb  head_stabilization.ipynb  hybrid_controller.ipynb  kin_replay.ipynb  mujoco_CPG_TarsusPos.ipynb  mujoco_CPG_control.ipynb  mujoco_CPG_control_tutorial.ipynb  mujoco_adhesion_gait_CPG.ipynb  mujoco_adhesion_turning_CPG.ipynb  mujoco_decentralized_ctrl.ipynb  mujoco_decentralized_ctrl_basic.ipynb  mujoco_decentralized_ctrl_complex_terrain.ipynb  mujoco_decentralized_ctrl_exercise.ipynb  mujoco_decentralized_ctrl_simplified.ipynb  mujoco_decentralized_ctrl_tutorial.ipynb  mujoco_fisheye_correction.ipynb  mujoco_hybrid_turning.ipynb  mujoco_replay.ipynb  mujoco_sinewave.ipynb  mujoco_terrain.ipynb  olfaction.ipynb  olfaction_basics.ipynb  path_integration.ipynb  plume_tracking.ipynb  reinforcement_learning.ipynb  retina_simulation.ipynb  rule_based_controller.ipynb  run_all_notebooks.sh  segment_swing_stance.ipynb  (+5 more)
outreach/: index.html
scripts/: .gitignore  check_cardinal_vectors.py  convert_kin_recording.py  demo_camera_fov.py  demo_olfaction.py  demo_vision.py  generate_ommatidia_type_mask.py  get_configs_from_flygym1.py  get_snapshot.py  hyperparameter_opt.py  ig_kin_replay.py  ig_scaling_test.py  kin_replay.py  launch_flybody_interactive_viewer.py  launch_interactive_viewer.py  link_libpython_dylib_macos.sh  mujoco_kin_replay.py  mujoco_scaling_test.py  mujoco_sine_wave.py  nmf_demo.py  olfaction.py  run_kinematic_replay.py  sine_wave.py
search/: search_index.json
tests/: README.md  conftest.py  test_mujoco.py
tutorials/: 1_basic_model_composition.ipynb  1_composing_models_and_scenes.ipynb  1bis_advanced_model_composition.ipynb  2_replaying_experimental_data.ipynb  2_replaying_experimental_recordings.ipynb  2bis_replaying_experimental_flybody_onball.ipynb  2bis_replaying_experimental_recordings_in_flybody.ipynb  3_gpu_accelerated_simulation.ipynb  3_replaying_experimental_data.ipynb  3test.py  4_gpu_accelerated_simulation.ipynb  advanced_olfaction.html  advanced_vision.html  cpg_controller.html  gym_basics_and_kinematic_replay.html  head_stabilization.html  hybrid_controller.html  index.html  olfaction.html  olfaction_basics.html  path_integration.html  rule_based_controller.html  scene_composition.ipynb  turning.html  vision.html  vision_basics.html
utils_game/: __init__.py  utils.py
(+629 files in other folders)
